--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>Tic Tac Toe</title>
-  <link href="stylesheets/style.css" rel="stylesheet" type="text/css" media="all" />
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="container">
-    <!-- write your html -->
-    <div class="title"><h2>tic tac toe</h2></div>
-    <div class="l-flex"><div class="choice choice-active" id="circle">○</div><div class="choice" id="cross">×</div></div>
-    <div class="l-grid">
-      <div class="l-grid-cell cell" id="cell1"></div>
-      <div class="l-grid-cell cell" id="cell2"></div>
-      <div class="l-grid-cell cell" id="cell3"></div>
-      <div class="l-grid-cell cell" id="cell4"></div>
-      <div class="l-grid-cell cell" id="cell5"></div>
-      <div class="l-grid-cell cell" id="cell6"></div>
-      <div class="l-grid-cell cell" id="cell7"></div>
-      <div class="l-grid-cell cell" id="cell8"></div>
-      <div class="l-grid-cell cell" id="cell9"></div>
+  <head>
+    <meta charset="utf-8" />
+    <title>Tic Tac Toe</title>
+
+    <link
+      href="stylesheets/style.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <!-- write your html -->
+      <div class="title"><h2>tic tac toe</h2></div>
+      <div class="l-flex">
+        <div class="choice choice-active" id="circle">○</div>
+        <div class="choicegh-pages" id="cross">×</div>
+      </div>
+      <div class="l-grid">
+        <div class="l-grid-cell cell" id="cell1"></div>
+        <div class="l-grid-cell cell" id="cell2"></div>
+        <div class="l-grid-cell cell" id="cell3"></div>
+        <div class="l-grid-cell cell" id="cell4"></div>
+        <div class="l-grid-cell cell" id="cell5"></div>
+        <div class="l-grid-cell cell" id="cell6"></div>
+        <div class="l-grid-cell cell" id="cell7"></div>
+        <div class="l-grid-cell cell" id="cell8"></div>
+        <div class="l-grid-cell cell" id="cell9"></div>
+      </div>
+      <div class="progress">
+        <div id="progress-starting">starting...</div>
+        <div id="progress-win-circle" class="hidden">○ win!!</div>
+        <div id="progress-win-cross" class="hidden">× win!!</div>
+        <div id="progress-draw" class="hidden">draw</div>
+      </div>
+      <div class="button" id="reset-button">RESTART</div>
+
     </div>
-    <div class="progress">
-    <div id="progress-starting">starting...</div>
-    <div id="progress-win-circle" class="hidden">○ win!!</div>
-    <div id="progress-win-cross" class="hidden">× win!!</div>
-    <div id="progress-draw"  class="hidden">draw</div>
-  </div>
-    <div class="button" id="reset-button">RESTART</div>
-  </div>
-  <script type="text/javascript" src="js/function.js"></script>
-</body>
+    <script type="text/javascript" src="js/function.js"></script>
+  </body>
 </html>
