--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 <head>
   <meta charset="utf-8" />
   <title>Tic Tac Toe</title>
-  <link href="stylesheets/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap" rel="stylesheet">
+  <link href="stylesheets/css/index.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
   <div class="container">
-    <!-- write your html -->
-  </div>
+      <header class="header">
+        <h1 class="ttl">TIC TAC TOE</h1>
+      </header>
+      <main>
+        <div class="displayTurn">
+          <div class="turn maru active">○</div>
+          <div class="turn batsu">×</div>
+        </div>
+        <div class="gameBoard">
+          <table class="js-table">
+            <tbody>
+              <tr class="row">
+                <td class="js-box" data-key="1"></td>
+                <td class="js-box" data-key="2"></td>
+                <td class="js-box" data-key="3"></td>
+              </tr>
+              <tr class="row">
+                <td class="js-box" data-key="4"></td>
+                <td class="js-box" data-key="5"></td>
+                <td class="js-box" data-key="6"></td>
+              </tr>
+              <tr class="row">
+                <td class="js-box" data-key="7"></td>
+                <td class="js-box" data-key="8"></td>
+                <td class="js-box" data-key="9"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </main>
+
+        <div class="footer">
+          <div class="message js-message">starting...</div>
+          <a class="btn" id="js-restart">RESTART</a>
+        </div>
+    </div>
   <script type="text/javascript" src="js/function.js"></script>
 </body>
 </html>
