--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>Tic Tac Toe</title>
-  <link href="stylesheets/style.css" rel="stylesheet" type="text/css" media="all" />
-</head>
-<body>
-  <div class="container">
-    <!-- write your html -->
-  </div>
-  <script type="text/javascript" src="js/function.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Tic Tac Toe</title>
+    <link
+      href="stylesheets/style.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
+  </head>
+  <body>
+    <div class="l-container">
+      <!-- write your html -->
+      <main class="l-main">
+        <header>
+          <h1 class="headline">TIC TAC TOE</h1>
+          <div class="turn">
+            <div class="turn-item circle active">○</div>
+            <div class="turn-item cross">×</div>
+          </div>
+        </header>
+        <div class="board">
+          <table class="table js-table">
+            <tr class="row">
+              <td class="cell js-cell" data-key="1"></td>
+              <td class="cell js-cell" data-key="2"></td>
+              <td class="cell js-cell" data-key="3"></td>
+            </tr>
+            <tr class="row">
+              <td class="cell js-cell" data-key="4"></td>
+              <td class="cell js-cell" data-key="5"></td>
+              <td class="cell js-cell" data-key="6"></td>
+            </tr>
+            <tr class="row">
+              <td class="cell js-cell" data-key="7"></td>
+              <td class="cell js-cell" data-key="8"></td>
+              <td class="cell js-cell" data-key="9"></td>
+            </tr>
+          </table>
+        </div>
+        <footer>
+          <div class="state-message js-state-message">starting...</div>
+          <a class="button js-restart">RESTART</a>
+        </footer>
+      </main>
+    </div>
+    <script type="text/javascript" src="js/function.js"></script>
+  </body>
 </html>
