--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
         <header>
           <h1 class="headline">TIC TAC TOE</h1>
           <div class="turn">
-            <div class="turn-item circle active">○</div>
-            <div class="turn-item cross">×</div>
+            <div class="turn-item circle js-circle active">○</div>
+            <div class="turn-item cross js-cross">×</div>
           </div>
         </header>
         <div class="board">
           <table class="table js-table">
             <tr class="row">
-              <td class="cell js-cell" data-key="1"></td>
-              <td class="cell js-cell" data-key="2"></td>
-              <td class="cell js-cell" data-key="3"></td>
+              <td class="cell js-cell" id="1"></td>
+              <td class="cell js-cell" id="2"></td>
+              <td class="cell js-cell" id="3"></td>
             </tr>
             <tr class="row">
-              <td class="cell js-cell" data-key="4"></td>
-              <td class="cell js-cell" data-key="5"></td>
-              <td class="cell js-cell" data-key="6"></td>
+              <td class="cell js-cell" id="4"></td>
+              <td class="cell js-cell" id="5"></td>
+              <td class="cell js-cell" id="6"></td>
             </tr>
             <tr class="row">
-              <td class="cell js-cell" data-key="7"></td>
-              <td class="cell js-cell" data-key="8"></td>
-              <td class="cell js-cell" data-key="9"></td>
+              <td class="cell js-cell" id="7"></td>
+              <td class="cell js-cell" id="8"></td>
+              <td class="cell js-cell" id="9"></td>
             </tr>
           </table>
         </div>
         <footer>
           <div class="state-message js-state-message">starting...</div>
-          <a class="button js-restart">RESTART</a>
+          <a class="button js-button">RESTART</a>
         </footer>
       </main>
     </div>
-    <script type="text/javascript" src="js/function.js"></script>
+    <script type="text/javascript" src="js/function-test.js"></script>
   </body>
 </html>
