--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         </footer>
       </main>
     </div>
-    <script type="text/javascript" src="js/function-test.js"></script>
+    <script type="text/javascript" src="js/function.js"></script>
   </body>
 </html>
