--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
         <h1 class="ttl">TIC TAC TOE</h1>
       </header>
       <main>
-        <div class="displayTurn">
-          <div class="turn maru active">○</div>
-          <div class="turn batsu">×</div>
+        <div class="players">
+          <div class="player maru active">○</div>
+          <div class="player batsu">×</div>
         </div>
-        <div class="gameBoard">
+        <div id="gameBoard">
           <table class="js-table">
             <tbody>
               <tr class="row">
-                <td class="js-box" data-key="1"></td>
-                <td class="js-box" data-key="2"></td>
-                <td class="js-box" data-key="3"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
               </tr>
               <tr class="row">
-                <td class="js-box" data-key="4"></td>
-                <td class="js-box" data-key="5"></td>
-                <td class="js-box" data-key="6"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
               </tr>
               <tr class="row">
-                <td class="js-box" data-key="7"></td>
-                <td class="js-box" data-key="8"></td>
-                <td class="js-box" data-key="9"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
+                <td class="js-box"></td>
               </tr>
             </tbody>
           </table>
