add html and style

--- a/index.html
+++ b/index.html
@@ -3,12 +3,45 @@
 <head>
   <meta charset="utf-8" />
   <title>Tic Tac Toe</title>
-  <link href="stylesheets/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="stylesheets/scss/index.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
+
   <div class="container">
-    <!-- write your html -->
+
+    <main>
+      <h1>Tic Tac Toe</h1>
+
+      <div class="turn">
+        turn
+      </div>
+
+      <table>
+        <tbody>
+          <tr>
+            <td class="cross"></td>
+            <td class="circle"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <br>
+      <button>Restart</button>
+    </main>
+
   </div>
+
   <script type="text/javascript" src="js/function.js"></script>
 </body>
 </html>
