add toggle func

--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
       <h1>Tic Tac Toe</h1>
 
       <div class="turn">
-        turn
+        <ul>
+          <li class="fisrt">○</li>
+          <li class="second">×</li>
+        </ul>
       </div>
 
       <table>
         <tbody>
           <tr>
-            <td class="cross"></td>
-            <td class="circle"></td>
-            <td></td>
+            <td class="square"></td>
+            <td class="square"></td>
+            <td class="square"></td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="square"></td>
+            <td class="square"></td>
+            <td class="square"></td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="square"></td>
+            <td class="square"></td>
+            <td class="square"></td>
           </tr>
         </tbody>
       </table>
 
       <br>
-      <button>Restart</button>
+      <button class="btn-reset">Reset</button>
     </main>
 
   </div>
