add array for line

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
       <table>
         <tbody>
           <tr>
-            <td class="square"></td>
-            <td class="square"></td>
-            <td class="square"></td>
+            <td class="square square1"></td>
+            <td class="square square2"></td>
+            <td class="square square3"></td>
           </tr>
           <tr>
-            <td class="square"></td>
-            <td class="square"></td>
-            <td class="square"></td>
+            <td class="square square4"></td>
+            <td class="square square5"></td>
+            <td class="square square6"></td>
           </tr>
           <tr>
-            <td class="square"></td>
-            <td class="square"></td>
-            <td class="square"></td>
+            <td class="square square7"></td>
+            <td class="square square8"></td>
+            <td class="square square9"></td>
           </tr>
         </tbody>
       </table>
-
+      <p>Winner: <span>x</span></p>
       <br>
       <button class="btn-reset">Reset</button>
     </main>
