show game status

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           </tr>
         </tbody>
       </table>
-      <p>Winner: <span>x</span></p>
+      <p>
+        <span class="status-endgame"></span>
+      </p>
       <br>
       <button class="btn-reset">Reset</button>
     </main>
