add current turn indicator

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
       <div class="turn">
         <ul>
-          <li class="fisrt">○</li>
-          <li class="second">×</li>
+          <li class="turn-first is-active">○</li>
+          <li class="turn-second">×</li>
         </ul>
       </div>
 
