--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <p>
         <span class="status-endgame"></span>
       </p>
+      <p>Winner: <span class="status-winner"></span></p>
       <br>
       <button class="btn-reset">Reset</button>
     </main>
