--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
           <li class="turn-second">×</li>
         </ul>
       </div>
-      <table>
+      <table class="grid">
         <tbody>
-          <tr>
+          <tr class="row">
             <td class="square square1"></td>
             <td class="square square2"></td>
             <td class="square square3"></td>
           </tr>
-          <tr>
+          <tr class="row">
             <td class="square square4"></td>
             <td class="square square5"></td>
             <td class="square square6"></td>
           </tr>
-          <tr>
+          <tr class="row">
             <td class="square square7"></td>
             <td class="square square8"></td>
             <td class="square square9"></td>
